--- a/flipopup.html
+++ b/flipopup.html
@@ -22,30 +22,37 @@
 	  	<div class="bottom">
 	  		<textarea onkeyup="liveOutput()" id="inputArea" placeholder="Paste your item string here..."></textarea> 
 	  	</div> 
-
+	  	<div id="itemParseError">An error occurred while parsing the item.</div>
 	  	<div id="itemContainer">
 	  		<div id="floatingItemInfo" class="floating navbar">
 		  		<img id="itemMainImg" class="thumbnailImage" src="https://www.experts-exchange.com/questions/26390283/Verify-the-The-valid-Image-Exists-in-an-Image-URL.html">
 		  		<span id="itemName" class="importantInfo"></span>
 		  		<span id="itemID" class="importantInfo"></span>
-		  		<span id="itemValidity" class="importantInfo"></span>
 		  		<span id="itemIdentifier" class="subInfo"></span> 
+		  		<span id="itemValidity" class="importantInfo">
+		  			<i id="ValidItemIcon" class="fas fa-check-circle" style="display: none"></i><i id="InvalidItemIcon" class="fas fa-times-circle" style="display: none"></i>
+		  		</span>
 		  		<a id="itemURL" href="egwgwegeg.com" target="_blank"><i class="fas fa-external-link-square-alt"></i></a>
 	  		</div>
 	  		<div id="staticItemInfo" class="fixed infobox">
-	  			<span id="itemMerchantName" class="subInfo"></span>
-		  		<span id="itemMerchantID" class="subInfo"></span>
-		  		<span id="itemCurPrice" class="subInfo"></span><span id="itemOrigPrice" class="subInfo"></span>
+	  			<span id="itemMerchantName" class="subInfo"></span><br>
+		  		<span id="itemMerchantID" class="subInfo"></span><br>
+		  		<span id="itemCurPrice" class="subInfo"></span><span id="itemOrigPrice" class="subInfo"></span><br>
 		  		<span id="itemOptionalShortInfo">
-		  			<span id="itemSKU" class="subInfo"></span> 
-		  			<span id="itemUPC" class="subInfo"></span> 
-		  			<span id="itemBrand" class="subInfo"></span>
-		  			<span id="itemSize" class="subInfo"></span>
-		  			<span id="itemColor" class="subInfo"></span>
+		  			<span id="itemSKU" class="subInfo"></span> <br>
+		  			<span id="itemUPC" class="subInfo"></span> <br>
+		  			<span id="itemBrand" class="subInfo"></span><br>
+		  			<span id="itemSize" class="subInfo"></span><br>
+		  			<span id="itemColor" class="subInfo"></span><br>
 		  		</span>
-		  		<span id="itemDesc" class="subInfo"></span>
-		  		<span id="itemCategories" class="subInfo"></span>
-		  		<span id="itemBuyOnline" class="subInfo"></span><span id="itemBuyStore" class="subInfo"></span>
+		  		<span id="itemDesc" class="subInfo"></span><br>
+		  		<span id="itemCategories" class="subInfo"></span><br>
+		  		<span id="itemBuyOnline" class="subInfo">
+		  			Buy Online: <i id="BuyOnlineTrue" class="fas fa-check-circle" style="display: none; "></i><i id="BuyOnlineFalse" class="fas fa-times-circle" style="display: none"></i>
+		  		</span> <br>
+		  		<span id="itemBuyStore" class="subInfo">
+		  			Buy In Store: <i id="BuyStoreTrue" class="fas fa-check-circle" style="display: none"></i><i id="BuyStoreFalse" class="fas fa-times-circle" style="display: none"></i>
+		  		</span><br>
 		  		<div id="itemSpecs">
 		  		</div>
 		  		<div id="itemFeatures">
