--- a/flipopup.html
+++ b/flipopup.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="logo.jpeg">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
   </head>
   <body>
   	<div id="placeholder-extension-popup">
@@ -27,16 +29,16 @@
 	  		<div id="floatingItemInfo" class="floating navbar">
 		  		<img id="itemMainImg" class="thumbnailImage" src="https://www.experts-exchange.com/questions/26390283/Verify-the-The-valid-Image-Exists-in-an-Image-URL.html">
 		  		<span id="itemName" class="importantInfo"></span>
-		  		<span id="itemID" class="importantInfo"></span>
+		  		<span id="itemID" class="importantInfo"></span> <!-- unpopulated -->
 		  		<span id="itemIdentifier" class="subInfo"></span> 
 		  		<span id="itemValidity" class="importantInfo">
 		  			<i id="ValidItemIcon" class="fas fa-check-circle" style="display: none"></i><i id="InvalidItemIcon" class="fas fa-times-circle" style="display: none"></i>
 		  		</span>
-		  		<a id="itemURL" href="egwgwegeg.com" target="_blank"><i class="fas fa-external-link-square-alt"></i></a>
+		  		<a id="itemURL" href="#" target="_blank"><i class="fas fa-external-link-square-alt"></i></a>
 	  		</div>
 	  		<div id="staticItemInfo" class="fixed infobox">
 	  			<span id="itemMerchantName" class="subInfo"></span><br>
-		  		<span id="itemMerchantID" class="subInfo"></span><br>
+		  		<span id="itemMerchantID" class="subInfo"></span><br> <!-- unpopulated -->
 		  		<span id="itemCurPrice" class="subInfo"></span><span id="itemOrigPrice" class="subInfo"></span><br>
 		  		<span id="itemOptionalShortInfo">
 		  			<span id="itemSKU" class="subInfo"></span> <br>
@@ -54,13 +56,15 @@
 		  			Buy In Store: <i id="BuyStoreTrue" class="fas fa-check-circle" style="display: none"></i><i id="BuyStoreFalse" class="fas fa-times-circle" style="display: none"></i>
 		  		</span><br>
 		  		<div id="itemSpecs">
+		  			<table>
+		  			</table>
 		  		</div>
 		  		<div id="itemFeatures">
+		  			<table>
+		  			</table>
 		  		</div>
 		  		<div id="itemRatingInfo">
 		  			<span id="itemAvgRating" class="subInfo"></span>
-		  			<span id="itemNumPosRate" class="subInfo"></span>
-		  			<span id="itemNumNegRate" class="subInfo"></span>
 		  			<div id="itemReviews"></div>
 		  		</div>
 	  		</div>
