--- a/resultCard.html
+++ b/resultCard.html
@@ -3,12 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Result</title>
-	<script src="flipopup.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="icon" type="image/x-icon" href="logo.jpeg">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css">
-	<script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js"></script>
 	<style>
 		.popupModal {
 			width: 350px;
@@ -17,36 +13,36 @@
 			margin-right: auto;
 			margin-top: 50px;
 		}
+    #closeWindowBut:hover {
+      cursor: pointer;
+    }
 	</style>
 </head>
 <body>
-	<div class="popupModal">
-		<div class="ui fluid card" href="http://www.dog.com">
+	<div id="outerParsedItemContainer" class="popupModal" style="position: absolute; right: 30px; top: 40px; z-index: 2147000000; display: none">
+		<div class="ui fluid card">
 			<div class="ui styled fluid accordion">
-			  <div class="title" style="background-color: rgba(1, 198, 216,0.75); color: white;">
-			    <i class="image outline white icon"></i>
+			  <div class="title" style="background-color: rgba(1, 198, 216,0.75); color: white; position: inline; width: 350px; border-top-right-radius: 5px; border-top-left-radius: 5px">
+			    <span data-tooltip="View Image"><i class="image outline white icon"></i></span>
+          <i id="closeWindowBut" class="times white icon" style="float: right" onclick="$('#outerParsedItemContainer').detach();"></i>
 			  </div>
-			  <div class="content" style="padding: 0; margin: 0; margin-top: -40px">
-			   	<img src="https://res.cloudinary.com/reitmans/image/upload/c_fill,f_auto,dpr_auto,fl_awebp,q_auto:good,w_1000,h_1250/prd/product/Reitmans/xlarge/reitmans_402270_1_0.jpg" style="width: 100%; height: 100%; border-top-right-radius: 5px; border-top-left-radius: 5px;">
+			  <div class="content" style="padding: 0; margin: 0;">
+			   	<img id="itemMainImg" style="width: 100%; height: 100%; border-top-right-radius: 5px; border-top-left-radius: 5px;">
 			  </div>
 			</div>
-			
-			<div class="content">
-				<div class="ui ribbon label green" style="margin-bottom: 10px;">
-					<i class="check icon"></i> Enabled
-				</div>
-				<div class="header">Vintage Cashmere Scarf</div>
+			<div class="content" id="mainContent">
+
+				<div class="header"><a id="itemName" href="#" target="_blank" style="color: inherit"></a></div>
 				<div class="meta" style="float: left">
-					<span class="merchant">H&M</span> | <span class="brand">Divided</span> <br>
-					<span class="category" data-tooltip="Available Online"><i class="credit card outline icon green"></i></span>
-					<span class="category" data-tooltip="Available In Store"><i class="shopping basket icon red"></i></span>
-					<div class="ui star rating" data-rating="4" data-max-rating="5" data-tooltip="4.3 / 5"></div> (9)
+					<span id="itemBrand" class="brand"></span> <br>
+					<span class="category" data-tooltip="Online Availability"><i id="itemBuyOnline" class="credit card outline icon"></i></span>
+					<span class="category" data-tooltip="In-Store Availability"><i id="itemBuyStore" class="shopping basket icon"></i></span>
+					<div id="itemAvgReview" class="ui star rating" data-max-rating="5"></div>
 				</div>
 				<div class="meta" style="float: right; margin-top: -5px;">
-
 					<div class="ui large label" style="position: relative;">
-						<div class="floating ui red label" data-tooltip="Current Price" data-position="top left" style="left: 0px; opacity: 0.8;">$19.99</div>	
-						<span data-tooltip="Original Price" data-position="bottom right"><i class="dollar icon"></i> 23.99</span>
+						<div id="itemPriceLower" class="floating ui red label" data-tooltip="Current Price" data-position="top left" style="left: 0px; opacity: 0.8; display: none;"></div>
+						<span id="itemPrice" data-tooltip="Original Price" data-position="bottom right"><i class="dollar icon"></i> </span>
 					</div>
 				</div>
 			</div>
@@ -57,79 +53,35 @@
 					Description
 				</div>
 				<div class="active content">
-					<p>Round beach towel in cotton fabric with a printed pattern on velour at front and terry at back. Decorative tassel trim.</p>
+					<p id="itemDesc"></p>
 				</div>
 
 				<div class="title">
 					<i class="dropdown icon"></i>
-					Features (4)
+					Features
 				</div>
-				<div class="content">
-					<p>Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or shelters.</p>
-					<p>A pet shop may be the most convenient way to buy a dog. Buying a dog from a private owner allows you to assess the pedigree and upbringing of your dog before choosing to take it home. Lastly, finding your dog from a shelter, helps give a good home to a dog who may not find one so readily.</p>
+				<div class="content" id="itemFeatures">
 				</div>
 
 				<div class="title">
 					<i class="dropdown icon"></i>
-					Specs (3)
+					Specs
 				</div>
-				<div class="content">
-					<table class="ui very basic table">
-						<tbody>
-							<tr>
-								<td><b>John</b></td>
-								<td>Approved</td>
-							</tr>
-							<tr>
-								<td><b>John</b></td>
-								<td>Approved</td>
-							</tr>
-							<tr>
-								<td><b>John</b></td>
-								<td>Denied</td>
-							</tr>
-						</tbody>
-					</table>
+				<div class="content" id="itemSpecs">
 				</div>
 
 				<div class="title">
 					<i class="dropdown icon"></i>
-					Reviews (9)
+					Reviews
 				</div>
-				<div class="content">
-					<div class="ui message">
-						<div class="header" data-tooltip="Alex Xie" data-position="">
-							Best Pants
-						</div>
-						<p>Literally the best pants </p>
-					</div>
-					<div class="ui message" data-tooltip="Vevina Trinh">
-						<div class="header">
-							Best Pants
-						</div>
-						<p>These pants are great. The denim is really thicc. I like the colour. It's kind of long, but it's because I'm short. 10/10 would buy again!</p>
-					</div>
-					<div class="ui message" data-tooltip="John Smith">
-						<div class="header">
-							Worst pants
-						</div>
-						<p>We just updated our privacy policy here to better service our customers. We recommend reviewing the changes.</p>
-					</div>
+				<div class="content" id="itemReviews">
 				</div>
+
 			</div>
 			<div class="extra content" style="background-color: rgba(1, 198, 216,0.75); color: white;">
-				<div class="ui breadcrumb"  data-tooltip="Breadcrumb Categories" data-position="right center">
-					<span class="section">Home</span>
-					<i class="right angle icon divider" style="color: white;"></i>
-					<span class="section">Store</span>
-					<i class="right angle icon divider" style="color: white;"></i>
-					<span class="section">Shirts</span>
+				<div id="itemCategories" class="ui breadcrumb"  data-tooltip="Breadcrumb Categories" data-position="right center">
 				</div>
 			</div>
 	</div>
-
-
-	<script> $('.ui.accordion').accordion(); </script>   
-	<script type="text/javascript">$(document).ready(function(){$(".rating").rating();});</script>
 </body>
 </html>
